@@ -1,3 +1,5 @@
+- fix bug in sort_graph (used by build_transaction_set)
+
 Version 1.79 - 3 September 2007, by Pascal "Pixel" Rigaux
 
 - fix bug in sort_graph (used by build_transaction_set)
